--- a/src/main/resources/assets/hota/lang/en_us.json
+++ b/src/main/resources/assets/hota/lang/en_us.json
@@ -37,7 +37,7 @@
   "enchantment.hota.godblood": "god blood",
   "item.hota.infernalmetal": "Infernalmetal",
   "item.ufd.bluestrengthshovel": "Bluestrengthshovel",
-  "item.hota.chargedmetaloftheancients": "Chargedmetaloftheancients",
+  "item.hota.chargedmetaloftheancients": "§#18923Charged metal of the Ancients",
   "item.ufd.infernalmetal": "Infernalmetal",
   "entity.hota.ent": "Ent",
   "biome.upgrade.qqq": "Qqq",
@@ -45,7 +45,7 @@
   "biome.upgrade.arp": "forest of the ancients",
   "item.hota.stickstonegth": "Stickstonegth",
   "item.ufd.heavenlymetal": "Heavenlymetal",
-  "item.hota.katanaof_death": "Katana of Death",
+  "item.hota.katanaof_death": "§4Katana of Death",
   "item.hota.heavenlyhammer": "Heavenlyhammer",
   "item.hota.darkmetalhamer": "Darkmetalhammer",
   "biome.hota.enchantedforest": "Enchanted forest",
@@ -94,7 +94,7 @@
   "effect.bleeding": "bleeding",
   "biome.hota.ancientmounties": "Ancientmounties",
   "item.hota.vampire_spawn_egg": "Vampire Spawn Egg",
-  "item.hota.redstonestick": "Redstonestick",
+  "item.hota.redstonestick": "Redstone stick",
   "item.hota.losfoliteberry": "Losfoliteberry",
   "item.ufd.oldredstounhammer": "Oldredstounhammer",
   "item.upgrade.concertoftheancients": "Concertoftheancients",
@@ -107,10 +107,10 @@
   "item.upgrade.flowershovel": "Flowershovel",
   "item.minecraft.potion.effect.ancientwater": "Bottle of Ancient water",
   "item.ufd.bluestrengthsword": "Bluestrengthsword",
-  "painting.hota.working.author": "Unknown",
+  "painting.hota.working.author": "ZeMineProject",
   "item.upgrade.vampireblade": "Vampireblade",
   "item.upgrade.infernalsword": "Infernalsword",
-  "item.hota.thestarofinfinitespace": "Thestarofinfinitespace",
+  "item.hota.thestarofinfinitespace": "§6The star of §finfinite space",
   "item.upgrade.flowerpickaxe": "Flowerpickaxe",
   "biome.hota.crystalbiome": "Crystal biome",
   "item.hota.heartent": "Heart ent",
@@ -123,7 +123,7 @@
   "item.upgrade.floweraxe": "Flower axe",
   "item.upgrade.darkmetalsword": "Darkmetalsword",
   "item.upgrade.chargedmetaloftheancients": "Chargedmetaloftheancients",
-  "item.hota.thundertrident": "Thundertrident",
+  "item.hota.thundertrident": "Thunder trident",
   "item.hota.mossypig_spawn_egg": "Mossy pig Spawn Egg",
   "item_group.hota.relics": "Relics",
   "item.hota.edibleroots": "Edible roots",
@@ -181,8 +181,8 @@
   "advancements.helloworld.title": "Hello world!",
   "biome.upgrade.mechanizedwastelandoftheancients": "wasteland of the ancients",
   "item.upgrade.oldredstounhammer": "Oldredstounhammer",
-  "item.hota.fanofcelestialstars": "Fanofcelestialstars",
-  "item.hota.concertoftheancients": "Concertoftheancients",
+  "item.hota.fanofcelestialstars": "§9Fan of celestial stars",
+  "item.hota.concertoftheancients": "§eConcert of the Ancients",
   "item.ufd.darkmetalshovel": "Darkmetalshovel",
   "block.hota.holy_leaves": "Holy_ Leaves",
   "block.hota.mosscobblestone": "Mosscobblestone",
@@ -191,7 +191,7 @@
   "subtitles.zvuk_mshystogo_pokrova": "",
   "item.hota.oldredstoun": "Oldredstoun",
   "item.hota.stonegth": "Stonegth",
-  "item.hota.vampireblade": "Vampireblade",
+  "item.hota.vampireblade": "§cVampire blade",
   "biome.hota.mechanizedwastelandoftheancients": "wasteland of the ancients",
   "block.hota.vayf": "Vayf",
   "item.hota.ancientworld": "Ancientworld Portal Igniter",
@@ -227,7 +227,7 @@
   "enchantment.ufd.godblood": "god blood",
   "gui.hota.ukayv.label_beta": "BETA",
   "block.hota.holy_log": "Holy_ Log",
-  "item.hota.thedestroyerofnature": "The destroyer of nature",
+  "item.hota.thedestroyerofnature": "§aThe destroyer of nature",
   "block.hota.fsdfgholubika": "Vayf",
   "item.hota.ent_spawn_egg": "Ent Spawn Egg",
   "item.upgrade.thecoreofadyingstar": "Thecoreofadyingstar",
@@ -243,7 +243,7 @@
   "enchantment.upgrade.godblood": "god blood",
   "item.hota.boilededibleroots": "Boiled edible roots",
   "item.hota.mossy_horror_spawn_egg": "Mossy Horror Spawn Egg",
-  "item.hota.metaloftheancients": "Metaloftheancients",
+  "item.hota.metaloftheancients": "§#e48a0cMetal of the Ancients",
   "item.upgrade.stonegthshovel": "Stonegthshovel",
   "item.upgrade.berrysalad": "Berrysalad",
   "item.upgrade.flowersword": "Flowersword",
@@ -270,7 +270,7 @@
   "block.hota.sdfdfdsiezhievika": "Vayf",
   "block.hota.holy_fence": "Holy_ Fence",
   "block.hota.holy_fence_gate": "Holy_ Fence Gate",
-  "item.hota.thecoreofadyingstar": "Thecoreofadyingstar",
+  "item.hota.thecoreofadyingstar": "The core of a dying star",
   "entity.hota.swarmoffireflies": "Swarm of fireflies",
   "block.hota.crystal_stairs": "Crystal Stairs",
   "entity.hota.carnivorousflower": "Carnivorous flower",
