--- a/src/main/resources/assets/hota/lang/ru_ru.json
+++ b/src/main/resources/assets/hota/lang/ru_ru.json
@@ -2,10 +2,10 @@
   "item.hota.pharaoh_spawn_egg": "Яйцо спавна фараона",
   "block.upgrade.crystalleaves": "Crystalleaves",
   "item.minecraft.potion.effect.berry_power": "Potion of Berry Power",
-  "biome.hota.entforest": "Ent forest",
+  "biome.hota.entforest": "Лес Энта",
   "block.hota.crystal_fence": "Кристальный забор",
-  "item.hota.eye_spawn_egg": "Яйцо спавна глаза",
   "biome.upgrade.vampirebiome": "Vampirebiome",
+  "item.hota.eye_spawn_egg": "Яйцо спавна глаза",
   "effect.hj": "fire",
   "item.upgrade.infernalmetal": "Infernalmetal",
   "item.minecraft.lingering_potion.effect.firepotion": "Lingering Potion of Firepotion",
@@ -23,9 +23,9 @@
   "block.hota.crystal_pressure_plate": "Кристальная нажимная плита",
   "item.minecraft.lingering_potion.effect.berry_power": "Lingering Potion of Berry Power",
   "item.upgrade.darkmetalingot": "Darkmetalingot",
-  "block.hota.cherryfoliage": "Листва вишни",
-  "item.hota.losfolitepickaxe": "Топор из лосфолита",
   "block.hota.xy": "Vayf",
+  "item.hota.losfolitepickaxe": "Топор из лосфолита",
+  "block.hota.cherryfoliage": "Листва вишни",
   "subtitles.wasteland_of_the_ancients": "",
   "block.hota.crystal_button": "Кристальная кнопка",
   "item.upgrade.stickstonegth": "Stickstonegth",
@@ -33,7 +33,7 @@
   "block.hota.crystal_planks": "Кристальные доски",
   "biome.hota.plainsofabyss": "Plainsofabyss",
   "entity.upgrade.eye": "Eye",
-  "biome.hota.vampirebiome": "Vampire biome",
+  "biome.hota.vampirebiome": "Биом Вампира",
   "item.ufd.stickstonegth": "Stickstonegth",
   "enchantment.hota.godblood": "Кровь богов",
   "item.ufd.bluestrengthshovel": "Bluestrengthshovel",
@@ -49,7 +49,7 @@
   "item.hota.katanaof_death": "Катана смерти",
   "item.hota.heavenlyhammer": "Небесный молот",
   "item.hota.darkmetalhamer": "Молот из тёмной стали",
-  "biome.hota.enchantedforest": "Enchanted forest",
+  "biome.hota.enchantedforest": "Зачарованный Лес",
   "gui.hota.ukayv.button_cook": "Cook",
   "entity.upgrade.thedarkmonk": "Thedarkmonk",
   "block.hota.fdsfsiezhievika": "Vayf",
@@ -58,7 +58,7 @@
   "item.hota.blackberry": "Смородина",
   "block.hota.holy_planks": "Святые доски",
   "block.upgrade.crystalwood": "Crystal wood",
-  "advancements.theoldworld.descr": "Enter the ancient world",
+  "advancements.theoldworld.descr": "Зайти в древний мир",
   "item.hota.oldredstounsworld": "меч из древнего редстоуна",
   "biome.hota.coalbeach": "Qqq",
   "biome.hota.berryplain": "Berryplain",
@@ -114,7 +114,7 @@
   "item.upgrade.infernalsword": "Infernalsword",
   "item.hota.thestarofinfinitespace": "Звезда бесконечного космоса",
   "item.upgrade.flowerpickaxe": "Flowerpickaxe",
-  "biome.hota.crystalbiome": "Crystal biome",
+  "biome.hota.crystalbiome": "Кристальный биом",
   "item.hota.heartent": "Сердце энта",
   "item.hota.darkmetalingot": "слиток тёмной стали",
   "enchantment.hota.thewrathofhell": "Гнев ада",
@@ -217,7 +217,7 @@
   "item.upgrade.thedarkmonk_spawn_egg": "Thedarkmonk Spawn Egg",
   "item.upgrade.thestarofinfinitespace": "Thestarofinfinitespace",
   "item.upgrade.heavenlyhammer": "Heavenlyhammer",
-  "biome.hota.arp": "forest of the ancients",
+  "biome.hota.arp": "Древний лес",
   "item.hota.currant": "Черника",
   "itemGroup.tabrelics": "Реликвии",
   "item.upgrade.redstonestick": "Redstonestick",
@@ -254,9 +254,9 @@
   "item.ufd.stonegth": "Stonegth",
   "item.upgrade.oldredstounshovel": "Oldredstounshovel",
   "item.upgrade.fanofcelestialstars": "Fanofcelestialstars",
-  "advancements.thepowerofheaven.descr": "Get the heavenly metal",
+  "advancements.thepowerofheaven.descr": "Получить небесный металл",
   "item.upgrade.stonegth": "Stonegth",
-  "advancements.helloworld.descr": "Enter the world",
+  "advancements.helloworld.descr": "Зайти в созданный мир",
   "item.hota.heavenlysword": "Меч из небесного металла",
   "item.hota.infernalhammer": "Молот из адского металла",
   "block.hota.rustymetal": "Ржавый металл",
