--- a/src/main/resources/assets/hota/lang/en_us.json
+++ b/src/main/resources/assets/hota/lang/en_us.json
@@ -110,7 +110,7 @@
   "painting.hota.working.author": "ZeMineProject",
   "item.upgrade.vampireblade": "Vampireblade",
   "item.upgrade.infernalsword": "Infernalsword",
-  "item.hota.thestarofinfinitespace": "§6The star of §finfinite space",
+  "item.hota.thestarofinfinitespace": "§6The star o§ff infinite space",
   "item.upgrade.flowerpickaxe": "Flowerpickaxe",
   "biome.hota.crystalbiome": "Crystal biome",
   "item.hota.heartent": "Heart ent",
