--- a/src/main/resources/assets/hota/lang/ru_ru.json
+++ b/src/main/resources/assets/hota/lang/ru_ru.json
@@ -65,7 +65,7 @@
   "biome.ufd.arp": "forest of the ancients",
   "item.hota.oldredstounhammer": "Молот из древнего редстоуна",
   "item.hota.stonegthhammer": "Молот из стоунжа",
-  "item.ufd.fanofcelestialstars": "Fanofcelestialstars",
+  "item.ufd.fanofcelestialstars": "§9Веер звёздного неба",
   "entity.hota.mechanicaleye": "Механизированный глаз",
   "enchantment.ufd.thewrathofheaven": "Thewrathofheaven",
   "block.hota.holy_slab": "Святой полублок",
@@ -229,7 +229,7 @@
   "enchantment.ufd.godblood": "god blood",
   "gui.hota.ukayv.label_beta": "BETA",
   "block.hota.holy_log": "Святое бревно",
-  "item.hota.thedestroyerofnature": "Уничтожитель природы",
+  "item.hota.thedestroyerofnature": "§aУничтожитель природы",
   "block.hota.fsdfgholubika": "Vayf",
   "item.hota.ent_spawn_egg": "Яйцо спавна Энта",
   "item.upgrade.thecoreofadyingstar": "Thecoreofadyingstar",
@@ -253,7 +253,7 @@
   "biome.upgrade.waterenchantedbiome": "water enchanted biome",
   "item.ufd.stonegth": "Stonegth",
   "item.upgrade.oldredstounshovel": "Oldredstounshovel",
-  "item.upgrade.fanofcelestialstars": "Fanofcelestialstars",
+  "item.upgrade.fanofcelestialstars": "§9Веер звёздного неба",
   "advancements.thepowerofheaven.descr": "Получить небесный металл",
   "item.upgrade.stonegth": "Stonegth",
   "advancements.helloworld.descr": "Зайти в созданный мир",
