--- a/src/main/resources/assets/hota/lang/en_us.json
+++ b/src/main/resources/assets/hota/lang/en_us.json
@@ -4,8 +4,8 @@
   "item.minecraft.potion.effect.berry_power": "Potion of Berry Power",
   "biome.hota.entforest": "Entforest",
   "block.hota.crystal_fence": "Crystal Fence",
-  "item.hota.eye_spawn_egg": "Eye Spawn Egg",
   "biome.upgrade.vampirebiome": "Vampirebiome",
+  "item.hota.eye_spawn_egg": "Eye Spawn Egg",
   "effect.hj": "fire",
   "item.upgrade.infernalmetal": "Infernalmetal",
   "item.minecraft.lingering_potion.effect.firepotion": "Lingering Potion of Firepotion",
@@ -19,12 +19,13 @@
   "block.hota.holy_button": "Holy_ Button",
   "item.upgrade.bluestrengthsword": "Bluestrengthsword",
   "block.hota.rustymetal_2": "Rustymetal",
+  "item.hota.galaxy_cutter": "Galaxy Cutter",
   "block.hota.crystal_pressure_plate": "Crystal Pressure Plate",
   "item.minecraft.lingering_potion.effect.berry_power": "Lingering Potion of Berry Power",
   "item.upgrade.darkmetalingot": "Darkmetalingot",
-  "block.hota.xy": "Vayf",
-  "block.hota.cherryfoliage": "Cherryfoliage",
   "item.hota.losfolitepickaxe": "Losfolitepickaxe",
+  "block.hota.cherryfoliage": "Cherryfoliage",
+  "block.hota.xy": "Vayf",
   "subtitles.wasteland_of_the_ancients": "",
   "block.hota.crystal_button": "Crystal Button",
   "item.upgrade.stickstonegth": "Stickstonegth",
@@ -35,7 +36,7 @@
   "biome.hota.vampirebiome": "Vampirebiome",
   "item.ufd.stickstonegth": "Stickstonegth",
   "enchantment.hota.godblood": "god blood",
-  "item.hota.infernalmetal": "Infernalmetal",
+  "item.hota.infernalmetal": "Infernal metal",
   "item.ufd.bluestrengthshovel": "Bluestrengthshovel",
   "item.hota.chargedmetaloftheancients": "§#18923Charged metal of the Ancients",
   "item.ufd.infernalmetal": "Infernalmetal",
@@ -47,7 +48,7 @@
   "item.ufd.heavenlymetal": "Heavenlymetal",
   "item.hota.katanaof_death": "§4Katana of Death",
   "item.hota.heavenlyhammer": "Heavenlyhammer",
-  "item.hota.darkmetalhamer": "Darkmetalhammer",
+  "item.hota.darkmetalhamer": "Dark metal hammer",
   "biome.hota.enchantedforest": "Enchanted forest",
   "gui.hota.ukayv.button_cook": "Cook",
   "entity.upgrade.thedarkmonk": "Thedarkmonk",
@@ -58,10 +59,10 @@
   "block.hota.holy_planks": "Holy_ Planks",
   "block.upgrade.crystalwood": "Crystal wood",
   "advancements.theoldworld.descr": "Enter the ancient world",
-  "item.hota.oldredstounsworld": "Oldredstounsworld",
+  "item.hota.oldredstounsworld": "Old redstone sworld",
   "biome.hota.berryplain": "Berryplain",
   "biome.ufd.arp": "forest of the ancients",
-  "item.hota.oldredstounhammer": "Oldredstounhammer",
+  "item.hota.oldredstounhammer": "Old redstone hammer",
   "item.hota.stonegthhammer": "Stonegthhammer",
   "item.ufd.fanofcelestialstars": "Fanofcelestialstars",
   "entity.hota.mechanicaleye": "Mechanicaleye",
@@ -70,7 +71,7 @@
   "item.upgrade.darkmetalshovel": "Darkmetalshovel",
   "item.minecraft.splash_potion.effect.berry_power": "Splash Potion of Berry Power",
   "item.hota.berrysalad": "Berrysalad",
-  "item.hota.oldredstounshovel": "Oldredstounshovel",
+  "item.hota.oldredstounshovel": "Old redstone shovel",
   "item.hota.bloodyfragment": "Bloodyfragment",
   "item.hota.abyss": "Totem of abyss",
   "item.ufd.infernalsword": "Infernalsword",
@@ -114,7 +115,7 @@
   "item.upgrade.flowerpickaxe": "Flowerpickaxe",
   "biome.hota.crystalbiome": "Crystal biome",
   "item.hota.heartent": "Heart ent",
-  "item.hota.darkmetalingot": "Darkmetalingot",
+  "item.hota.darkmetalingot": "Dark metal ingot",
   "enchantment.hota.thewrathofhell": "Thewrathofhell",
   "block.hota.crystallosfolite": "Crystallosfolite",
   "item_group.hota.upgrademod": "Upgrademod",
@@ -134,7 +135,7 @@
   "block.hota.mossplant": "Moss plant",
   "entity.hota.iceologer": "Iceologer",
   "item.ufd.bluestrenght": "Bluestrenght",
-  "item.hota.truewoodensword": "Truewoodensword",
+  "item.hota.truewoodensword": "True wooden sword",
   "item.ufd.infernalhammer": "Infernalhammer",
   "item.upgrade.cherry": "Cherry",
   "block.hota.holy_pressure_plate": "Holy_ Pressure Plate",
@@ -189,7 +190,7 @@
   "item.hota.lavastone": "Lava stone",
   "block.ufd.rustymetal_2": "Rustymetal",
   "subtitles.zvuk_mshystogo_pokrova": "",
-  "item.hota.oldredstoun": "Oldredstoun",
+  "item.hota.oldredstoun": "Old redstone",
   "item.hota.stonegth": "Stonegth",
   "item.hota.vampireblade": "§cVampire blade",
   "biome.hota.mechanizedwastelandoftheancients": "wasteland of the ancients",
@@ -279,7 +280,7 @@
   "item.hota.mechanicaleye_spawn_egg": "Mechanicaleye Spawn Egg",
   "item.minecraft.tipped_arrow.effect.firepotion": "Arrow of Fire",
   "item.ufd.stonegthshovel": "Stonegthshovel",
-  "item.hota.darkmetalshovel": "Darkmetalshovel",
+  "item.hota.darkmetalshovel": "Dark metal shovel",
   "entity.hota.mossypig": "Mossy pig",
   "advancements.theoldworld.title": "The ancient world",
   "item.hota.blueberries": "Blueberries",
@@ -307,5 +308,5 @@
   "item.minecraft.splash_potion.effect.ancientwater": "Splash Potion of Ancientwater",
   "item.upgrade.raspberry": "Raspberry",
   "gui.hota.apsrsp.button_prighotovit": "Приготовить",
-  "item.hota.darkmetalsword": "Darkmetalsword"
+  "item.hota.darkmetalsword": "Dark metal sword"
 }
