--- a/src/main/resources/assets/hota/lang/ru_ru.json
+++ b/src/main/resources/assets/hota/lang/ru_ru.json
@@ -20,6 +20,7 @@
   "block.hota.holy_button": "Святая кнопка",
   "item.upgrade.bluestrengthsword": "Bluestrengthsword",
   "block.hota.rustymetal_2": "Ржавый металл",
+  "item.hota.galaxy_cutter": "Galaxy Cutter",
   "block.hota.crystal_pressure_plate": "Кристальная нажимная плита",
   "item.minecraft.lingering_potion.effect.berry_power": "Lingering Potion of Berry Power",
   "item.upgrade.darkmetalingot": "Darkmetalingot",
@@ -109,8 +110,8 @@
   "item.upgrade.flowershovel": "Flowershovel",
   "item.minecraft.potion.effect.ancientwater": "Бутылка древней воды",
   "item.ufd.bluestrengthsword": "Bluestrengthsword",
-  "painting.hota.working.author": "Unknown",
-  "item.upgrade.vampireblade": "Vampireblade",
+  "painting.hota.working.author": "ZeMineProject",
+  "item.upgrade.vampireblade": "§cВампирский Клинок",
   "item.upgrade.infernalsword": "Infernalsword",
   "item.hota.thestarofinfinitespace": "Звезда бесконечного космоса",
   "item.upgrade.flowerpickaxe": "Flowerpickaxe",
@@ -183,7 +184,7 @@
   "advancements.helloworld.title": "Привет мир!",
   "biome.upgrade.mechanizedwastelandoftheancients": "wasteland of the ancients",
   "item.upgrade.oldredstounhammer": "Oldredstounhammer",
-  "item.hota.fanofcelestialstars": "Веер небесных звёзд",
+  "item.hota.fanofcelestialstars": "§9Веер небесных звёзд",
   "item.hota.concertoftheancients": "Концерт древних",
   "item.ufd.darkmetalshovel": "Darkmetalshovel",
   "block.hota.holy_leaves": "Святая листва",
@@ -193,7 +194,7 @@
   "subtitles.zvuk_mshystogo_pokrova": "",
   "item.hota.oldredstoun": "Древний редстоун",
   "item.hota.stonegth": "Стоунж",
-  "item.hota.vampireblade": "Вампирский клинок",
+  "item.hota.vampireblade": "§cВампирский клинок",
   "biome.hota.mechanizedwastelandoftheancients": "wasteland of the ancients",
   "block.hota.vayf": "Vayf",
   "item.hota.ancientworld": "Первый том книги закленаний",
@@ -215,7 +216,7 @@
   "biome.upgrade.crystalbiome": "Crystal biome",
   "item.ufd.stonegthsword": "Stonegthsword",
   "item.upgrade.thedarkmonk_spawn_egg": "Thedarkmonk Spawn Egg",
-  "item.upgrade.thestarofinfinitespace": "Thestarofinfinitespace",
+  "item.upgrade.thestarofinfinitespace": "Звезда бесконечного космоса",
   "item.upgrade.heavenlyhammer": "Heavenlyhammer",
   "biome.hota.arp": "Древний лес",
   "item.hota.currant": "Черника",
@@ -260,7 +261,7 @@
   "item.hota.heavenlysword": "Меч из небесного металла",
   "item.hota.infernalhammer": "Молот из адского металла",
   "block.hota.rustymetal": "Ржавый металл",
-  "item.ufd.vampireblade": "Vampireblade",
+  "item.ufd.vampireblade": "§cВампирский Клинок",
   "item.hota.thunderstone": "Гром камень",
   "entity.hota.vampire": "Вампир",
   "entity.hota.mossy_horror": "Mossy Horror",
@@ -303,7 +304,7 @@
   "item.hota.sandwich": "Сэндвич",
   "item.ufd.darkmetalingot": "Darkmetalingot",
   "item.ufd.flowershovel": "Flowershovel",
-  "item.upgrade.vampire_spawn_egg": "Vampire Spawn Egg",
+  "item.upgrade.vampire_spawn_egg": "Яйцо призыва вампира",
   "advancements.thelandofmoss.descr": "Enter the mossy cover",
   "item.upgrade.oldredstoun": "Oldredstoun",
   "item.upgrade.bluestrenght": "Bluestrenght",
