--- a/src/main/resources/assets/hota/lang/ru_ru.json
+++ b/src/main/resources/assets/hota/lang/ru_ru.json
@@ -4,8 +4,8 @@
   "item.minecraft.potion.effect.berry_power": "Potion of Berry Power",
   "biome.hota.entforest": "Лес Энта",
   "block.hota.crystal_fence": "Кристальный забор",
-  "biome.upgrade.vampirebiome": "Vampirebiome",
   "item.hota.eye_spawn_egg": "Яйцо спавна глаза",
+  "biome.upgrade.vampirebiome": "Vampirebiome",
   "effect.hj": "fire",
   "item.upgrade.infernalmetal": "Infernalmetal",
   "item.minecraft.lingering_potion.effect.firepotion": "Lingering Potion of Firepotion",
@@ -24,9 +24,9 @@
   "block.hota.crystal_pressure_plate": "Кристальная нажимная плита",
   "item.minecraft.lingering_potion.effect.berry_power": "Lingering Potion of Berry Power",
   "item.upgrade.darkmetalingot": "Darkmetalingot",
-  "block.hota.xy": "Vayf",
-  "item.hota.losfolitepickaxe": "Топор из лосфолита",
   "block.hota.cherryfoliage": "Листва вишни",
+  "item.hota.losfolitepickaxe": "Топор из лосфолита",
+  "block.hota.xy": "Vayf",
   "subtitles.wasteland_of_the_ancients": "",
   "block.hota.crystal_button": "Кристальная кнопка",
   "item.upgrade.stickstonegth": "Stickstonegth",
@@ -66,7 +66,7 @@
   "biome.ufd.arp": "forest of the ancients",
   "item.hota.oldredstounhammer": "Молот из древнего редстоуна",
   "item.hota.stonegthhammer": "Молот из стоунжа",
-  "item.ufd.fanofcelestialstars": "§9Веер звёздного неба",
+  "item.ufd.fanofcelestialstars": "§x§0§1§3§3§B§1В§x§0§B§3§E§B§5е§x§1§4§4§8§B§9е§x§1§E§5§3§B§Eр §x§3§1§6§8§C§6з§x§3§A§7§3§C§Aв§x§4§4§7§E§C§Fё§x§4§D§8§8§D§3з§x§5§7§9§3§D§7д§x§6§1§9§E§D§Bн§x§6§A§A§8§D§Fо§x§7§4§B§3§E§4г§x§7§D§B§E§E§8о §x§9§0§D§3§F§0н§x§9§A§D§E§F§5е§x§A§3§E§8§F§9б§x§A§D§F§3§F§Dа",
   "entity.hota.mechanicaleye": "Механизированный глаз",
   "enchantment.ufd.thewrathofheaven": "Thewrathofheaven",
   "block.hota.holy_slab": "Святой полублок",
@@ -184,7 +184,7 @@
   "advancements.helloworld.title": "Привет мир!",
   "biome.upgrade.mechanizedwastelandoftheancients": "wasteland of the ancients",
   "item.upgrade.oldredstounhammer": "Oldredstounhammer",
-  "item.hota.fanofcelestialstars": "§x§1§7§0§0§2§2В§x§1§B§0§0§2§Bе§x§1§F§0§0§3§3е§x§2§3§0§0§3§Cр §x§2§B§0§0§4§Dн§x§2§F§0§0§5§6е§x§3§3§0§0§6§3б§x§3§6§0§0§6§Fе§x§3§A§0§0§7§Cс§x§3§D§0§0§8§9н§x§4§1§0§0§9§5ы§x§4§4§0§0§A§2х §x§6§2§0§0§C§1з§x§7§2§0§0§D§1в§x§8§1§0§0§E§0ё§x§9§0§0§0§F§0з§x§9§F§0§0§F§Fд",
+  "item.hota.fanofcelestialstars": "§x§0§1§3§3§B§1В§x§0§B§3§E§B§5е§x§1§4§4§8§B§9е§x§1§E§5§3§B§Eр §x§3§1§6§8§C§6з§x§3§A§7§3§C§Aв§x§4§4§7§E§C§Fё§x§4§D§8§8§D§3з§x§5§7§9§3§D§7д§x§6§1§9§E§D§Bн§x§6§A§A§8§D§Fо§x§7§4§B§3§E§4г§x§7§D§B§E§E§8о §x§9§0§D§3§F§0н§x§9§A§D§E§F§5е§x§A§3§E§8§F§9б§x§A§D§F§3§F§Dа",
   "item.hota.concertoftheancients": "Концерт древних",
   "item.ufd.darkmetalshovel": "Darkmetalshovel",
   "block.hota.holy_leaves": "Святая листва",
@@ -254,7 +254,7 @@
   "biome.upgrade.waterenchantedbiome": "water enchanted biome",
   "item.ufd.stonegth": "Stonegth",
   "item.upgrade.oldredstounshovel": "Oldredstounshovel",
-  "item.upgrade.fanofcelestialstars": "§9Веер звёздного неба",
+  "item.upgrade.fanofcelestialstars": "§x§0§1§3§3§B§1В§x§0§B§3§E§B§5е§x§1§4§4§8§B§9е§x§1§E§5§3§B§Eр §x§3§1§6§8§C§6з§x§3§A§7§3§C§Aв§x§4§4§7§E§C§Fё§x§4§D§8§8§D§3з§x§5§7§9§3§D§7д§x§6§1§9§E§D§Bн§x§6§A§A§8§D§Fо§x§7§4§B§3§E§4г§x§7§D§B§E§E§8о §x§9§0§D§3§F§0н§x§9§A§D§E§F§5е§x§A§3§E§8§F§9б§x§A§D§F§3§F§Dа",
   "advancements.thepowerofheaven.descr": "Получить небесный металл",
   "item.upgrade.stonegth": "Stonegth",
   "advancements.helloworld.descr": "Зайти в созданный мир",
