--- a/src/main/resources/assets/hota/lang/en_us.json
+++ b/src/main/resources/assets/hota/lang/en_us.json
@@ -19,13 +19,14 @@
   "block.hota.holy_button": "Holy_ Button",
   "item.upgrade.bluestrengthsword": "Bluestrengthsword",
   "block.hota.rustymetal_2": "Rustymetal",
+  "item.hota.oddities_trader_spawn_egg": "Oddities Trader Spawn Egg",
   "item.hota.galaxy_cutter": "Galaxy Cutter",
   "block.hota.crystal_pressure_plate": "Crystal Pressure Plate",
   "item.minecraft.lingering_potion.effect.berry_power": "Lingering Potion of Berry Power",
   "item.upgrade.darkmetalingot": "Darkmetalingot",
-  "item.hota.losfolitepickaxe": "Losfolitepickaxe",
-  "block.hota.cherryfoliage": "Cherryfoliage",
   "block.hota.xy": "Vayf",
+  "block.hota.cherryfoliage": "Cherryfoliage",
+  "item.hota.losfolitepickaxe": "Losfolitepickaxe",
   "subtitles.wasteland_of_the_ancients": "",
   "block.hota.crystal_button": "Crystal Button",
   "item.upgrade.stickstonegth": "Stickstonegth",
@@ -59,6 +60,7 @@
   "block.hota.holy_planks": "Holy_ Planks",
   "block.upgrade.crystalwood": "Crystal wood",
   "advancements.theoldworld.descr": "Enter the ancient world",
+  "advancements.who_needs_a_nezerite.descr": "Crafting a stoneght",
   "item.hota.oldredstounsworld": "Old redstone sworld",
   "biome.hota.berryplain": "Berryplain",
   "biome.ufd.arp": "forest of the ancients",
@@ -93,6 +95,7 @@
   "item.ufd.darkmetalsword": "Darkmetalsword",
   "item.ufd.heavenlyhammer": "Heavenlyhammer",
   "effect.bleeding": "bleeding",
+  "advancements.the_fire_of_hell.title": "The Fire Of Hell",
   "biome.hota.ancientmounties": "Ancientmounties",
   "item.hota.vampire_spawn_egg": "Vampire Spawn Egg",
   "item.hota.redstonestick": "Redstone stick",
@@ -102,6 +105,7 @@
   "block.hota.crystal_log": "Crystal Log",
   "item.hota.infernalsword": "Infernalsword",
   "biome.hota.orpa": "wasteland of the ancients",
+  "advancements.new_materials.title": "New Materials",
   "item.upgrade.duhat": "Duhat",
   "item.hota.iceologer_spawn_egg": "Iceologer Spawn Egg",
   "item.ufd.chargedmetaloftheancients": "Chargedmetaloftheancients",
@@ -110,6 +114,7 @@
   "item.ufd.bluestrengthsword": "Bluestrengthsword",
   "painting.hota.working.author": "ZeMineProject",
   "item.upgrade.vampireblade": "Vampireblade",
+  "item.hota.ancient_coin": "Ancient Coin",
   "item.upgrade.infernalsword": "Infernalsword",
   "item.hota.thestarofinfinitespace": "§6The star o§ff infinite space",
   "item.upgrade.flowerpickaxe": "Flowerpickaxe",
@@ -125,6 +130,7 @@
   "item.upgrade.darkmetalsword": "Darkmetalsword",
   "item.upgrade.chargedmetaloftheancients": "Chargedmetaloftheancients",
   "item.hota.thundertrident": "Thunder trident",
+  "gui.hota.traider.button_empty": "buy",
   "item.hota.mossypig_spawn_egg": "Mossy pig Spawn Egg",
   "item_group.hota.relics": "Relics",
   "item.hota.edibleroots": "Edible roots",
@@ -145,11 +151,13 @@
   "item.minecraft.tipped_arrow.effect.berry_power": "Arrow of Berry Power",
   "entity.hota.projectileiceologer": "Projectile iceologer",
   "subtitles.muzyka_mshstogo_pokrova": "",
+  "advancements.who_needs_a_nezerite.title": "Who Needs A Nezerite?",
   "item.minecraft.potion.effect.firepotion": "Potion of Fire",
   "itemGroup.tabupgrademod": "Upgrademod",
   "item.hota.losfolitesword": "Losfolitesword",
   "item.ufd.flowerpickaxe": "Flowerpickaxe",
   "item.ufd.flowersword": "Flowersword",
+  "entity.hota.oddities_trader": "Oddities Trader",
   "item.ufd.darkmetalhamer": "Darkmetalhammer",
   "block.hota.gfdfdgiezhievika": "Vayf",
   "biome.upgrade.ancientmounties": "Ancientmounties",
@@ -164,6 +172,7 @@
   "item.upgrade.currant": "Currant",
   "block.hota.rrergholubika": "Vayf",
   "item.hota.flowersword": "Flowersword",
+  "advancements.the_fire_of_hell.descr": "Get the Infernal metal",
   "item.hota.losfoliteshovel": "Losfoliteshovel",
   "item.hota.strawberry": "Strawberry",
   "effect.hota.hj": "fire",
@@ -182,7 +191,7 @@
   "advancements.helloworld.title": "Hello world!",
   "biome.upgrade.mechanizedwastelandoftheancients": "wasteland of the ancients",
   "item.upgrade.oldredstounhammer": "Oldredstounhammer",
-  "item.hota.fanofcelestialstars": "§x§1§7§0§0§2§2F§x§1§A§0§0§2§9a§x§1§E§0§0§3§1n §x§2§5§0§0§4§0o§x§2§8§0§0§4§7f §x§2§F§0§0§5§6c§x§3§2§0§0§6§1e§x§3§5§0§0§6§Cl§x§3§8§0§0§7§7e§x§3§B§0§0§8§1s§x§3§E§0§0§8§Ct§x§4§1§0§0§9§7i§x§4§4§0§0§A§2a§x§5§1§0§0§A§Fl §x§6§B§0§0§C§As§x§7§8§0§0§D§7t§x§8§5§0§0§E§4a§x§9§2§0§0§F§2r§x§9§F§0§0§F§Fs",
+  "item.hota.fanofcelestialstars": "§x§0§F§4§E§F§1В§x§1§7§5§6§F§1е§x§1§E§5§F§F§1е§x§2§6§6§7§F§1р §x§3§5§7§8§F§1з§x§3§C§8§0§F§1в§x§4§4§8§9§F§1ё§x§4§B§9§1§F§1з§x§5§3§9§A§F§1д§x§5§B§A§2§F§1н§x§6§2§A§A§F§1о§x§6§A§B§3§F§1г§x§7§1§B§B§F§1о §x§8§0§C§C§F§1н§x§8§8§D§4§F§1е§x§8§F§D§D§F§1б§x§9§7§E§5§F§1а",
   "item.hota.concertoftheancients": "§eConcert of the Ancients",
   "item.ufd.darkmetalshovel": "Darkmetalshovel",
   "block.hota.holy_leaves": "Holy_ Leaves",
@@ -227,6 +236,7 @@
   "item.upgrade.blackberry": "Blackberry",
   "enchantment.ufd.godblood": "god blood",
   "gui.hota.ukayv.label_beta": "BETA",
+  "advancements.new_materials.descr": "Make an Old Redstone and Blustrength",
   "block.hota.holy_log": "Holy_ Log",
   "item.hota.thedestroyerofnature": "§aThe destroyer of nature",
   "block.hota.fsdfgholubika": "Vayf",
