--- a/src/main/resources/assets/hota/lang/ru_ru.json
+++ b/src/main/resources/assets/hota/lang/ru_ru.json
@@ -21,12 +21,13 @@
   "item.upgrade.bluestrengthsword": "Bluestrengthsword",
   "block.hota.rustymetal_2": "Ржавый металл",
   "item.hota.galaxy_cutter": "Galaxy Cutter",
+  "item.hota.oddities_trader_spawn_egg": "Oddities Trader Spawn Egg",
   "block.hota.crystal_pressure_plate": "Кристальная нажимная плита",
   "item.minecraft.lingering_potion.effect.berry_power": "Lingering Potion of Berry Power",
   "item.upgrade.darkmetalingot": "Darkmetalingot",
-  "block.hota.xy": "Vayf",
-  "item.hota.losfolitepickaxe": "Топор из лосфолита",
   "block.hota.cherryfoliage": "Листва вишни",
+  "item.hota.losfolitepickaxe": "Топор из лосфолита",
+  "block.hota.xy": "Vayf",
   "subtitles.wasteland_of_the_ancients": "",
   "block.hota.crystal_button": "Кристальная кнопка",
   "item.upgrade.stickstonegth": "Stickstonegth",
@@ -60,6 +61,7 @@
   "block.hota.holy_planks": "Святые доски",
   "block.upgrade.crystalwood": "Crystal wood",
   "advancements.theoldworld.descr": "Зайти в древний мир",
+  "advancements.who_needs_a_nezerite.descr": "Crafting a stoneght",
   "item.hota.oldredstounsworld": "меч из древнего редстоуна",
   "biome.hota.coalbeach": "Qqq",
   "biome.hota.berryplain": "Berryplain",
@@ -95,6 +97,7 @@
   "item.ufd.darkmetalsword": "Darkmetalsword",
   "item.ufd.heavenlyhammer": "Heavenlyhammer",
   "effect.bleeding": "bleeding",
+  "advancements.the_fire_of_hell.title": "The Fire Of Hell",
   "biome.hota.ancientmounties": "Ancient mounties",
   "item.hota.vampire_spawn_egg": "Яйцо спавна вампира",
   "item.hota.redstonestick": "Редстоуновая палка",
@@ -104,6 +107,7 @@
   "block.hota.crystal_log": "Кристальное бревно",
   "item.hota.infernalsword": "Меч из адского металла",
   "biome.hota.orpa": "wasteland of the ancients",
+  "advancements.new_materials.title": "New Materials",
   "item.upgrade.duhat": "Duhat",
   "item.hota.iceologer_spawn_egg": "Iceologer Spawn Egg",
   "item.ufd.chargedmetaloftheancients": "Chargedmetaloftheancients",
@@ -112,6 +116,7 @@
   "item.ufd.bluestrengthsword": "Bluestrengthsword",
   "painting.hota.working.author": "ZeMineProject",
   "item.upgrade.vampireblade": "§cВампирский Клинок",
+  "item.hota.ancient_coin": "Ancient Coin",
   "item.upgrade.infernalsword": "Infernalsword",
   "item.hota.thestarofinfinitespace": "Звезда бесконечного космоса",
   "item.upgrade.flowerpickaxe": "Flowerpickaxe",
@@ -127,6 +132,7 @@
   "item.upgrade.darkmetalsword": "Darkmetalsword",
   "item.upgrade.chargedmetaloftheancients": "Chargedmetaloftheancients",
   "item.hota.thundertrident": "Громовой трезубец",
+  "gui.hota.traider.button_empty": "buy",
   "item.hota.mossypig_spawn_egg": "Яйцо спавна мшистой свиньи",
   "item_group.hota.relics": "Relics",
   "item.hota.edibleroots": "Съедобные корни",
@@ -147,11 +153,13 @@
   "item.minecraft.tipped_arrow.effect.berry_power": "Arrow of Berry Power",
   "entity.hota.projectileiceologer": "Projectile iceologer",
   "subtitles.muzyka_mshstogo_pokrova": "",
+  "advancements.who_needs_a_nezerite.title": "Who Needs A Nezerite?",
   "item.minecraft.potion.effect.firepotion": "Зелье огня",
   "itemGroup.tabupgrademod": "HotA",
   "item.hota.losfolitesword": "Меч из лосфолита",
   "item.ufd.flowerpickaxe": "Flowerpickaxe",
   "item.ufd.flowersword": "Flowersword",
+  "entity.hota.oddities_trader": "Oddities Trader",
   "item.ufd.darkmetalhamer": "Darkmetalhammer",
   "block.hota.gfdfdgiezhievika": "Vayf",
   "biome.upgrade.ancientmounties": "Ancientmounties",
@@ -166,6 +174,7 @@
   "item.upgrade.currant": "Currant",
   "block.hota.rrergholubika": "Vayf",
   "item.hota.flowersword": "Цветочный меч",
+  "advancements.the_fire_of_hell.descr": "Get the Infernal metal",
   "item.hota.losfoliteshovel": "Лопата из лосфолита",
   "item.hota.strawberry": "Клубника",
   "effect.hota.hj": "fire",
@@ -184,7 +193,7 @@
   "advancements.helloworld.title": "Привет мир!",
   "biome.upgrade.mechanizedwastelandoftheancients": "wasteland of the ancients",
   "item.upgrade.oldredstounhammer": "Oldredstounhammer",
-  "item.hota.fanofcelestialstars": "§x§1§7§0§0§2§2В§x§1§B§0§0§2§Bе§x§1§F§0§0§3§3е§x§2§3§0§0§3§Cр §x§2§B§0§0§4§Dн§x§2§F§0§0§5§6е§x§3§3§0§0§6§3б§x§3§6§0§0§6§Fе§x§3§A§0§0§7§Cс§x§3§D§0§0§8§9н§x§4§1§0§0§9§5ы§x§4§4§0§0§A§2х §x§6§2§0§0§C§1з§x§7§2§0§0§D§1в§x§8§1§0§0§E§0ё§x§9§0§0§0§F§0з§x§9§F§0§0§F§Fд",
+  "item.hota.fanofcelestialstars": "§x§1§7§0§0§2§2F§x§1§A§0§0§2§9a§x§1§E§0§0§3§1n §x§2§5§0§0§4§0o§x§2§8§0§0§4§7f §x§2§F§0§0§5§6c§x§3§2§0§0§6§1e§x§3§5§0§0§6§Cl§x§3§8§0§0§7§7e§x§3§B§0§0§8§1s§x§3§E§0§0§8§Ct§x§4§1§0§0§9§7i§x§4§4§0§0§A§2a§x§5§1§0§0§A§Fl §x§6§B§0§0§C§As§x§7§8§0§0§D§7t§x§8§5§0§0§E§4a§x§9§2§0§0§F§2r§x§9§F§0§0§F§Fs",
   "item.hota.concertoftheancients": "Концерт древних",
   "item.ufd.darkmetalshovel": "Darkmetalshovel",
   "block.hota.holy_leaves": "Святая листва",
@@ -229,6 +238,7 @@
   "item.upgrade.blackberry": "Blackberry",
   "enchantment.ufd.godblood": "god blood",
   "gui.hota.ukayv.label_beta": "BETA",
+  "advancements.new_materials.descr": "Make an Old Redstone and Blustrength",
   "block.hota.holy_log": "Святое бревно",
   "item.hota.thedestroyerofnature": "§aУничтожитель природы",
   "block.hota.fsdfgholubika": "Vayf",
